--- a/docs/pages/versions/unversioned/sdk/filesystem-next.mdx
+++ b/docs/pages/versions/unversioned/sdk/filesystem-next.mdx
@@ -47,7 +47,40 @@ try {
   destination.create();
   const output = await File.downloadFileAsync(url, destination);
   console.log(output.exists); // true
-  console.log(output.uri); // path to the downloaded file, e.g. '${cacheDirectory)/pdfs/sample.pdf'
+  console.log(output.uri); // path to the downloaded file, e.g. '${cacheDirectory}/pdfs/sample.pdf'
+} catch (error) {
+  console.error(error);
+}
+```
+
+### Moving and copying files
+
+```ts example.ts
+import { File, Paths } from 'expo-file-system/next';
+
+try {
+  const file = new File(Paths.document, 'example.txt');
+  file.create();
+  console.log(file.uri); // '${documentDirectory}/example.txt'
+  file.move(Paths.cache);
+  console.log(file.uri); // '${cacheDirectory}/example.txt'
+  file.move(new Directory(Paths.cache, 'newFolder'));
+  console.log(file.uri); // '${cacheDirectory}/newFolder/example.txt'
+} catch (error) {
+  console.error(error);
+}
+```
+
+### Using legacy filesystem API
+
+```ts example.ts
+import { FileSystem } from 'expo-file-system';
+import { File, Paths } from 'expo-file-system/next';
+
+try {
+  const file = new File(Paths.cache, 'example.txt');
+  const content = await FileSystem.readAsStringAsync(file.uri);
+  console.log(content);
 } catch (error) {
   console.error(error);
 }
@@ -56,3 +89,4 @@ try {
 ## API
 
 <APISection packageName="expo-file-system-next" apiName="FileSystem Next" />
+```
